Fixed user list alignment bug in Chrome, left-aligned player stats

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,7 @@ body {
 		flex-flow: column;
 
 		.player_head {
-			flex: 1 1 50%;
+			flex: 1 0 50%;
 			font-size: 5vmin;
 			position: relative;
 
@@ -73,7 +73,7 @@ body {
 
 		.player_stats {
 			background-color: #124;
-			flex: 0 1 50%;
+			flex: 1 0 50%;
 			width: 100%;
 			display: flex;
 			font-size: 2.5vmin;
@@ -94,13 +94,13 @@ body {
 					flex-flow: row nowrap;
 
 					.stat-icon {
-						flex: 0 0 1.4em;
+						margin-left: 0.05em;
+						flex: 0 0 1.55em;
 						color: #27E;
 					}
 
 					span {
 						flex: 1 0 auto;
-						text-align: center;
 					}
 				}
 			}
